Fixed subscribe button height on IE

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -15,6 +15,9 @@
 		position: absolute;
 		right: 0;
 		bottom: 0;
+		 @media (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+      		height: auto;
+  		}
 	}
 	.subscribe-label {
 		text-align: center;
